fix tests after refactor: replace Date with LocalDateTime in OLAP calculations Signed-off-by: dbulahov <bulahovdenis@gmail.com>